Email Feature Addition

--- a/ShopTemplate/appsettings.Development.json
+++ b/ShopTemplate/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MailSettings": {
+    "Mail": "garg.bhavesh22@gmail.com",
+    "DisplayName": "Bhavesh Garg",
+    "Password": "ljszkczryjlzrxtz",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
