--- a/ShopTemplate/appsettings.json
+++ b/ShopTemplate/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultCon": "Server=.;Database=shopivana; Trusted_Connection = True;Integrated Security=true;"
+  },
+  "MailSettings": {
+    "Mail": "<fromemail>",
+    "DisplayName": "<displayname>",
+    "Password": "<yourpasswordhere>",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
